--- a/theater/package.json
+++ b/theater/package.json
@@ -13,18 +13,21 @@
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev",
-    "build": "npm run typecheck && electron-vite build",
-    "postinstall": "electron-builder install-app-deps",
+    "build:native": "cd native && node-gyp configure build && cd ..",
+    "rebuild:native": "electron-rebuild -f -w native_addon -m native",
+    "build": "npm run typecheck && npm run build:native && electron-vite build",
+    "postinstall": "electron-builder install-app-deps && npm run build:native && npm run rebuild:native",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
-    "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux"
+    "build:mac": "npm run build && electron-builder --mac",
+    "build:linux": "npm run build && electron-builder --linux"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@tailwindcss/vite": "^4.1.13",
     "electron-updater": "^6.3.9",
+    "node-addon-api": "^8.5.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
@@ -37,11 +40,13 @@
     "@vitejs/plugin-react": "^5.0.3",
     "electron": "^38.1.2",
     "electron-builder": "^25.1.8",
+    "electron-rebuild": "^3.2.9",
     "electron-vite": "^4.0.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "node-gyp": "^11.4.2",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
