--- a/theater/tsconfig.json
+++ b/theater/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "files": [],
+  "compilerOptions": {
+    "strict": true,
+    "forceConsistentCasingInFileNames": true
+  },
   "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
 }
